// Vitest Snapshot v1

exports[`renders 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR eTvdtE gCUrWJ"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR fmEPPj gCUrWJ"
>
  foo
</button>
`;
